# opendal

bindings/python/: pyproject.toml.test-backup  quick_scenario_test.py  quick_scenario_test_report.json  test_current_status.py
bindings/python/chat/: 2025-01-31+Python-Bindings-Workspace-Refactoring-Plan.md  2025-01-31+Workspace-Root-Build-Restoration-Success.md  2025-08-02-python-bindings-refactor-progress.md  2025-08-04-package-size-optimization-analysis.md  2025-08-04-uv-build-unified-testing-success.md  2025-8-4 Summary.md  2025-8-4 way.md  Package-Splitting-Proposal-Comparison.md  Solution1-Implementation-Plan.md  Solution2-Independent-Packages-Detailed.md  comprehensive_test_plan.md  github-issue.md  maturin-doc.md
bindings/python/python/opendal/: __base.pyi  __init__.py
bindings/python/shared/: Cargo.toml
bindings/python/shared/src/: lib.rs
bindings/python/tests/: basic_functionality_report.json  independence_test_report.json  test_basic_functionality.py  test_current_state.py  test_distributed_packages.py  test_independent_packages.py  test_local_installation.py  test_optional_dependencies.py  test_optional_dependency_scenarios.py  test_optional_installation.py
bindings/python_new/: Cargo.toml  OLD_pyproject.toml  REFACTOR_JOURNEY.md  pyproject.toml
bindings/python_new/doc/: Pure Rust project    core  goodissue  opendal 初步了解.md  problem  workspace  workspace_doc
bindings/python_new/opendal_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bindings/python_new/src/: lib.rs
bindings/python_new/tests/: conftest.py  test_capability.py  test_read.py
