# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# Virtual workspace root package for toolchain compatibility
[package]
name = "opendal-workspace"
version = "0.45.20"
edition = "2021"
publish = false

[workspace]
members = [
    "packages/opendal-core",
    "packages/opendal-service-redis",
    # Add more service packages here as needed
]
resolver = "2"

# Shared workspace dependencies for all packages
[workspace.dependencies]
bytes = "1.5.0"
chrono = "0.4"
dict_derive = "0.6.0"
futures = "0.3.28"
opendal = { version = ">=0", path = "../../core", features = [
  "blocking",
  "layers-mime-guess"
] }
pyo3 = { version = "0.25.1", features = ["generate-import-lib", "chrono"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
tokio = "1"